# Dune-CLI

./: .gitignore  README.md  requirements.txt  setup.py
dune/: __main__.py  agent.py  cli.py  client.py  converter.py  gemini_client.py  groq_client.py  pyproject.toml  requirements.txt  rich_ui.py
dune/tools/: __init__.py  edit.py  glob.py  grep.py  ls.py  read_file.py  read_many_files.py  shell.py  web_search.py  write_file.py
